<resources>
    <string name="app_name">Android1Les1hw</string>
    <string name="bagishbekov_nursamad">Bagishbekov Nursamad</string>
    <string name="passenger">Passenger:</string>
    <string name="flight">FLIGHT</string>
    <string name="seat">SEAT</string>
    <string name="gate">GATE</string>
    <string name="flight_nd350f">FLIGHT: D350F</string>
    <string name="boarding">BOARDING BEGINS: 23:30</string>
    <string name="seat_3c">SEAT: 3C</string>
    <string name="gate1">GATE: D4</string>
    <string name="seat_nc3">SEAT: C3</string>

</resources>