<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iw_qr_code  " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="36dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <ImageView
        android:id="@+id/iw_company_name"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_passenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_emirates"
        android:text="@string/passenger"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/iw_company_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_emirates"
        android:paddingHorizontal="10dp"
        android:text="@string/bagishbekov_nursamad"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_passenger"
        app:layout_constraintStart_toEndOf="@id/tv_passenger" />

    <ImageView
        android:id="@+id/iw_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_passenger" />

    <LinearLayout
        android:id="@+id/containerUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/iw_qr_code"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/iw_ticket">

        <TextView
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ic_font"
            android:text="@string/boarding"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ic_font"
            android:text="@string/flight_nd350f"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/containerDown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/iw_qr_code"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/containerUp">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ic_font"
            android:text="@string/gate1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ic_font"
            android:text="@string/seat_nc3"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iw_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_qr_cod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/content_end" />


</androidx.constraintlayout.widget.ConstraintLayout>